added strong in cards titles and navigation bar

--- a/OurApp/src/app/product-show/product-show.component.html
+++ b/OurApp/src/app/product-show/product-show.component.html
@@ -1,6 +1,6 @@
 <section class="card bg-dark text-white" style="max-width: 18rem;">
   <div class="card-header bg-dark">
-    <h5 class="card-title">{{productToShow.name}}</h5>
+    <h5 class="card-title"><strong>{{productToShow.name}}</strong></h5>
   </div>
   <img class="card-img" src={{productToShow.photo}} height="180" alt="Card image cap"/>
   <div class="card-img-overlay">
