--- a/OurApp/src/app/app.component.html
+++ b/OurApp/src/app/app.component.html
@@ -1,7 +1,33 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-  </div>
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+
+        <div class="container">
+          <a class="navbar-brand" href="./"><b>MYSITE</b></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+                <a class="nav-link" href="/mesas">MESAS <span class="sr-only">(current)</span></a>
+                </li>
+        <li class="nav-item">
+                <a class="nav-link" href="/products">PRODUCTOS</a>
+              </li>
+            </ul>
+        <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="text" placeholder="Buscar ..." aria-label="Buscar ...">
+              <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">BUSCAR</button>
+            </form>
+
+
+          </div>
+
+          </div>
+
+        </nav>
+</header>
+<br>
+
 <router-outlet></router-outlet>
