--- a/OurApp/src/app/product-details/product-details.component.html
+++ b/OurApp/src/app/product-details/product-details.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-3">
     <section class="card bg-dark text-white">
       <div class="card-header bg-dark">
-        <h5 class="card-title">{{productToShow.name}}</h5>
+        <h5 class="card-title"><strong>{{productToShow.name}}</strong></h5>
       </div>
       <img class="card-img" src={{productToShow.photo}} height="300" alt="Card image cap"/>
       <div class="card-img-overlay"></div>
