uploaded position of the Details link in products

--- a/OurApp/src/app/product-show/product-show.component.html
+++ b/OurApp/src/app/product-show/product-show.component.html
@@ -4,6 +4,6 @@
   </div>
   <img class="card-img" src={{productToShow.photo}} height="180" alt="Card image cap"/>
   <div class="card-img-overlay">
-      <a href="products/details" class="card-link" style="float: right">Details</a>
+    <a href="products/details" class="bottom card-link m-2 text-white"><strong>Details</strong></a>
   </div>
 </section>
