improvement in visuals, ald organization

--- a/OurApp/src/app/product-details/product-details.component.html
+++ b/OurApp/src/app/product-details/product-details.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-3">
-    <section class="card bg-dark text-white">
+    <section class="card bg-dark text-white" >
       <div class="card-header bg-dark">
         <h5 class="card-title"><strong>{{productToShow.name}}</strong></h5>
       </div>
@@ -32,3 +32,5 @@
     </section>
   </div>
 </div>
+<button (click)=goBack() class="btn btn-primary">Go back!</button>
+
