--- a/OurApp/src/app/product-show/product-show.component.html
+++ b/OurApp/src/app/product-show/product-show.component.html
@@ -1,9 +1,9 @@
-<section class="card bg-dark text-white" style="max-width: 18rem;">
+<section class="center card bg-dark text-white" style="max-width: 18rem;">
   <div class="card-header bg-dark">
     <h5 class="card-title"><strong>{{productToShow.name}}</strong></h5>
   </div>
-  <img class="card-img" src={{productToShow.photo}} height="180" alt="Card image cap"/>
+  <img class="card-img" src={{productToShow.photo}} height="180" width="180" alt="Card image cap"/>
   <div class="card-img-overlay">
-    <a href="products/details" class="bottom card-link m-2 text-white"><strong>Details</strong></a>
+    <a routerLink="{{productToShow.id}}" class="bottom card-link m-2 text-white"><strong>Details</strong></a>
   </div>
 </section>
