--- a/OurApp/src/app/product-details/product-details.component.html
+++ b/OurApp/src/app/product-details/product-details.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-3">
+  <div class="col-md-3 ml-5">
     <section class="card bg-dark text-white" >
       <div class="card-header bg-dark">
         <h5 class="card-title"><strong>{{productToShow.name}}</strong></h5>
@@ -9,7 +9,7 @@
     </section>
   </div>
 
-  <div class="col-md-8">
+  <div class="col-md-8 ml-4">
     <section class="card bg-light mb-3">
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
@@ -32,5 +32,7 @@
     </section>
   </div>
 </div>
-<button (click)=goBack() class="btn btn-primary">Go back!</button>
-
+<br>
+<div style="text-align: center; ">
+  <button (click)=goBack() class="btn btn-primary ">Go back!</button>
+</div>
