--- a/OurApp/src/app/mesa-add-product/mesa-add-product.component.html
+++ b/OurApp/src/app/mesa-add-product/mesa-add-product.component.html
@@ -1,5 +1,5 @@
 <section class="row ">
-    <app-app-product-show-mesa [productToShow]="product" class="col-lg-3 col-md-6 col-sm-12"
+    <app-app-product-show-mesa [productToShow]="product" [mesa]="mesa" class="col-lg-3 col-md-6 col-sm-12"
      style="width: 18rem;" *ngFor="let product of products; let i of index">
     </app-app-product-show-mesa>
   </section>
