--- a/OurApp/src/app/mesa-show/mesa-show.component.html
+++ b/OurApp/src/app/mesa-show/mesa-show.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-11 col-center col-mb-3 ">
     <section class="card bg-dark text-white" >
       <div class="card-header bg-dark">
-        <h5 class="card-title"><strong>Mesa {{mesa.id}}</strong></h5>
+        <h5 class="card-title"><strong>Mesa {{mesa}}</strong></h5>
       </div>
     </section>
   </div>
@@ -13,7 +13,7 @@
           <div class="card-header">
             <h5 class="card-title">Products</h5>
           </div>
-          <div *ngFor="let product of productos" class="card-body">
+          <div *ngFor="let product of Products" class="card-body">
             <p class="card-text">Product: <strong>{{product.name}}</strong></p>
             <p class="card-text">Price: {{product.price}} $</p>
           </div>
@@ -33,5 +33,5 @@
 <div style="text-align: center">
 <button (click)=goBack() class="btn btn-primary">Go back!</button>
 <button routerLink="Products" class="btn btn-primary">Add products</button>
-<button  (click)=goBack() class="btn btn-danger">Cerrar Cuenta</button>
+<button  (click)=deleteThis() class="btn btn-danger">Cerrar Cuenta</button>
 </div>
