--- a/OurApp/src/app/product-show/product-show.component.html
+++ b/OurApp/src/app/product-show/product-show.component.html
@@ -4,6 +4,6 @@
   </div>
   <img class="card-img" src={{productToShow.photo}} height="180" width="180" alt="Card image cap"/>
   <div class="card-img-overlay">
-    <a routerLink="{{productToShow.id}}" class="bottom card-link m-2 text-white"><strong>Details</strong></a>
+    <a routerLink="{{productToShow._id}}" class="bottom card-link m-2 text-white"><strong>Details</strong></a>
   </div>
 </section>
