alerts added and fixed problems in the delete of tables

--- a/OurApp/src/app/app-product-show-mesa/app-product-show-mesa.component.html
+++ b/OurApp/src/app/app-product-show-mesa/app-product-show-mesa.component.html
@@ -6,3 +6,6 @@
     <div class="card-img-overlay">
     </div>
   </button>
+  <ngb-alert *ngIf="successMessage" type="success" (close)="successMessage = null" [dismissible]="false">
+      <strong>{{ successMessage }}</strong>
+  </ngb-alert>
