--- a/OurApp/src/app/mesa-show/mesa-show.component.html
+++ b/OurApp/src/app/mesa-show/mesa-show.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-11 col-center col-mb-3 ">
     <section class="card bg-dark text-white" >
       <div class="card-header bg-dark">
-        <h5 class="card-title"><strong>Mesa {{mesa}}</strong></h5>
+        <h5 class="card-title"><strong>Table {{mesa}}</strong></h5>
       </div>
     </section>
   </div>
@@ -32,6 +32,5 @@
 </div>
 <div style="text-align: center">
 <button (click)=goBack() class="btn btn-primary">Go back!</button>
-<button routerLink="Products" class="btn btn-primary">Add products</button>
-<button  (click)=deleteThis() class="btn btn-danger">Cerrar Cuenta</button>
+<button  (click)=deleteThis() class="btn btn-danger">Close Table</button>
 </div>
