--- a/OurApp/src/app/app.component.html
+++ b/OurApp/src/app/app.component.html
@@ -3,22 +3,22 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
 
         <div class="container">
-          <a class="navbar-brand" href="./"><b>MYSITE</b></a>
+          <a class="navbar-brand" href="./"><b>GOLAMGIR</b></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="#navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-                <a class="nav-link" href="/mesas">MESAS <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/mesas">TABLES <span class="sr-only">(current)</span></a>
                 </li>
         <li class="nav-item">
-                <a class="nav-link" href="/products">PRODUCTOS</a>
+                <a class="nav-link" href="/products">PRODUCTS</a>
               </li>
             </ul>
         <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Buscar ..." aria-label="Buscar ...">
-              <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">BUSCAR</button>
+              <input class="form-control mr-sm-2" type="text" placeholder="Search..." aria-label="Search ...">
+              <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">SEARCH</button>
             </form>
           </div>
           </div>
