--- a/OurApp/src/app/mesa-show/mesa-show.component.html
+++ b/OurApp/src/app/mesa-show/mesa-show.component.html
@@ -32,6 +32,8 @@
   </div>
 </div>
 <div style="text-align: center">
+<button  (click)=seeTables() class="btn btn-primary">See Tables</button>
 <button (click)=goBack() class="btn btn-primary">Go back!</button>
 <button  (click)=deleteThis() class="btn btn-danger">Close Table</button>
+
 </div>
