--- a/OurApp/src/app/app.component.html
+++ b/OurApp/src/app/app.component.html
@@ -16,15 +16,10 @@
                 <a class="nav-link" href="/products">PRODUCTS</a>
               </li>
             </ul>
-        <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search..." aria-label="Search ...">
-              <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">SEARCH</button>
-            </form>
           </div>
           </div>
         </nav>
 </header>
 <br>
-<div class="c">
+<!-- have deleted div class c -->
 <router-outlet></router-outlet>
-</div>
