--- a/OurApp/src/app/product-show/product-show.component.html
+++ b/OurApp/src/app/product-show/product-show.component.html
@@ -1,9 +1,25 @@
-<section class="center card bg-dark text-white" style="max-width: 18rem;">
-  <div class="card-header bg-dark">
-    <h5 class="card-title"><strong>{{productToShow.name}}</strong></h5>
-  </div>
-  <img class="card-img" src={{productToShow.photo}} height="180" width="180" alt="Card image cap"/>
-  <div class="card-img-overlay">
-    <a routerLink="{{productToShow._id}}" class="bottom card-link m-2 text-white"><strong>Details</strong></a>
-  </div>
+<section
+    class="center card bg-dark text-white"
+    style="max-width: 18rem;"
+>
+    <div class="card-header bg-dark">
+        <h5 class="card-title">
+            <strong>{{productToShow.name}}</strong>
+        </h5>
+    </div>
+    <img
+        class="card-img"
+        src="{{productToShow.photo}}"
+        height="180"
+        width="180"
+        alt="Card image cap"
+    >
+    <div class="card-img-overlay">
+        <a
+            routerLink="{{productToShow._id}}"
+            class="bottom card-link m-2 text-white"
+        >
+            <strong>Details</strong>
+        </a>
+    </div>
 </section>
