--- a/OurApp/src/app/app.component.css
+++ b/OurApp/src/app/app.component.css
@@ -3,3 +3,13 @@
   border: 3px solid green;
   padding: 10px;
 }
+.body {
+  padding: 10px;
+  padding-bottom: 70px; /* Height of the footer */
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px; /* Set the fixed height of the footer here */
+}
