--- a/OurApp/src/styles.css
+++ b/OurApp/src/styles.css
@@ -9,6 +9,7 @@ html,
 body {
    margin:0;
    padding:0;
+   width: 100%;
    height:100%;
 }
 
@@ -16,4 +17,8 @@ body {
 .main-idx {
   min-height: 100%;
   position: relative;
+}
+
+.active{
+  font-weight: bold;
 }
