fixed rows, they were 10px bigger than screen

--- a/OurApp/src/app/mesa-add-product/mesa-add-product.component.html
+++ b/OurApp/src/app/mesa-add-product/mesa-add-product.component.html
@@ -7,7 +7,7 @@
     style="text-align:center;"
 >
 <br>
-<section class="row">
+<section class="row container col-center">
     <app-app-product-show-mesa
         [productToShow]="product"
         [mesa]="mesa"
