--- a/OurApp/src/app/mesa-show/mesa-show.component.html
+++ b/OurApp/src/app/mesa-show/mesa-show.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row container col-center">
   <div class="col-md-11 col-center col-mb-3 ">
     <section class="card bg-dark text-white" >
       <div class="card-header bg-dark">
