--- a/OurApp/src/app/product-details/product-details.component.html
+++ b/OurApp/src/app/product-details/product-details.component.html
@@ -1,15 +1,15 @@
-<div class="row">
-  <div class="col-md-3 ml-5">
+<div class="row container col-center">
+  <div class="col-md-4">
     <section class="card bg-dark text-white" >
       <div class="card-header bg-dark">
         <h5 class="card-title"><strong>{{productToShow.name}}</strong></h5>
       </div>
-      <img class="card-img" src={{productToShow.photo}} height="300" alt="Card image cap"/>
+      <img class="card-img" src={{productToShow.photo}} height="300" width="300" alt="Card image cap"/>
       <div class="card-img-overlay"></div>
     </section>
   </div>
 
-  <div class="col-md-8 ml-4">
+  <div class="col-md-8">
     <section class="card bg-light mb-3">
       <ul class="list-group list-group-flush">
         <li class="list-group-item">
