--- a/OurApp/src/app/products-list/products-list.component.html
+++ b/OurApp/src/app/products-list/products-list.component.html
@@ -7,11 +7,11 @@
     style="text-align:center;"
 >
 <br>
-<section class="row">
+<section class="row container col-center">
     <app-product-show
         [productToShow]="product"
         class="col-lg-3 col-md-6 col-sm-12"
-        style="width: 18rem; margin-bottom: 10px;"
+        style="margin-bottom: 10px;"
         *ngFor="let product of products; let i of index"
     >
     </app-product-show>
