--- a/OurApp/src/styles.css
+++ b/OurApp/src/styles.css
@@ -1,24 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.min.css";
-@import "~font-awesome/css/font-awesome.css";
-
-
-
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~font-awesome/css/font-awesome.css';
 
 html,
 body {
-   margin:0;
-   padding:0;
-   width: 100%;
-   height:100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
-
 
 .main-idx {
   min-height: 100%;
   position: relative;
 }
 
-.active{
+.active {
   font-weight: bold;
+}
+
+.col-center {
+  margin: auto;
+  float: 0;
 }
