--- a/OurApp/src/app/mesa-add-product/mesa-add-product.component.css
+++ b/OurApp/src/app/mesa-add-product/mesa-add-product.component.css
@@ -2,3 +2,12 @@
   margin: auto;
   float: 0;
 }
+.example-form {
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
