--- a/OurApp/src/styles.css
+++ b/OurApp/src/styles.css
@@ -26,3 +26,13 @@ body {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.loader {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url('assets/img/pageLoader.gif') 50% 50% no-repeat rgb(249,249,249);
+  opacity: .8;
+}
