deleted styles tags and added its functions on the correspondent css

--- a/OurApp/src/app/app-product-show-mesa/app-product-show-mesa.component.css
+++ b/OurApp/src/app/app-product-show-mesa/app-product-show-mesa.component.css
@@ -1,13 +1,17 @@
-.bottom{
+.bottom {
   position: absolute;
   bottom: 0px;
   right: 5px;
 }
 .center {
- margin: auto;
- padding: 10px;
+  margin: auto;
+  padding: 10px;
 }
 
-.alert{
+.alert {
   min-height: 6rem;
+}
+
+.button {
+  max-width: 24rem;
 }
