--- a/OurApp/src/app/app-product-show-mesa/app-product-show-mesa.component.html
+++ b/OurApp/src/app/app-product-show-mesa/app-product-show-mesa.component.html
@@ -1,7 +1,6 @@
-<button
+<button class="button"
     (click)="AddProduct()"
     class="center card bg-dark text-white"
-    style="max-width: 24rem;"
 >
     <div class="card-header">
         <h5 class="card-title">
