--- a/OurApp/src/app/mesa-add-product/mesa-add-product.component.html
+++ b/OurApp/src/app/mesa-add-product/mesa-add-product.component.html
@@ -11,14 +11,13 @@
     <app-app-product-show-mesa
         [productToShow]="product"
         [mesa]="mesa"
-        class="col-lg-3 col-md-6 col-sm-12"
-        style="width: 18rem; margin-bottom: 10px;"
+        class="col-lg-3 col-md-6 col-sm-12 product"
         *ngFor="let product of products; let i of index"
     >
     </app-app-product-show-mesa>
 </section>
 <br>
-<div style="text-align: center">
+<div class="center">
     <button
         (click)="goBack()"
         class="btn btn-primary"
