--- a/OurApp/src/app/mesa-show/mesa-show.component.html
+++ b/OurApp/src/app/mesa-show/mesa-show.component.html
@@ -31,7 +31,7 @@
     </section>
   </div>
 </div>
-<div style="text-align: center">
+<div class="center">
 <button  (click)=seeTables() class="btn btn-primary">See Tables</button>
 <button (click)=goBack() class="btn btn-primary">Go back!</button>
 <button  (click)=deleteThis() class="btn btn-danger">Close Table</button>
