--- a/OurApp/src/app/product-details/product-details.component.html
+++ b/OurApp/src/app/product-details/product-details.component.html
@@ -33,6 +33,6 @@
   </div>
 </div>
 <br>
-<div style="text-align: center; ">
+<div class="center">
   <button (click)=goBack() class="btn btn-primary ">Go back!</button>
 </div>
