--- a/OurApp/src/app/product-show/product-show.component.css
+++ b/OurApp/src/app/product-show/product-show.component.css
@@ -1,9 +1,13 @@
-.bottom{
-   position: absolute;
-   bottom: 0px;
-   right: 5px;
+.bottom {
+  position: absolute;
+  bottom: 0px;
+  right: 5px;
 }
 .center {
   margin: auto;
   padding: 10px;
+}
+
+.max24 {
+  max-width: 24rem;
 }
