--- a/OurApp/src/app/product-show/product-show.component.html
+++ b/OurApp/src/app/product-show/product-show.component.html
@@ -1,6 +1,5 @@
 <section
-    class="center card bg-dark text-white"
-    style="max-width: 24rem;"
+    class="center card bg-dark text-white max24"
 >
     <div class="card-header bg-dark">
         <h5 class="card-title">
