--- a/OurApp/src/app/products-list/products-list.component.css
+++ b/OurApp/src/app/products-list/products-list.component.css
@@ -3,7 +3,7 @@
   border: 3px solid green;
   padding: 10px;
 }
-.col-center{
+.col-center {
   margin: auto;
   float: 0;
 }
@@ -15,4 +15,8 @@
 
 .example-full-width {
   width: 100%;
+}
+
+.bottomMargin {
+  margin-bottom: 10px;
 }
