--- a/OurApp/src/app/products-list/products-list.component.html
+++ b/OurApp/src/app/products-list/products-list.component.html
@@ -10,8 +10,8 @@
     <section class="row container col-center">
         <app-product-show
             [productToShow]="product"
-            class="col-lg-3 col-md-6 col-sm-12"
-            style="margin-bottom: 10px;"
+            class="col-lg-3 col-md-6 col-sm-12 bottomMargin"
+
             *ngFor="let product of products; let i of index"
         >
         </app-product-show>
